--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -23,6 +23,66 @@ table.table > tbody > tr > td {
 }
 
 
+/********* datatables *************/
+
+.dataTables_length select, .dataTables_filter input {
+  height: auto;
+  line-height: normal;
+  padding: 4px;
+  margin: 0;
+}
+
+.dataTables_length select {
+  
+  margin-bottom: 10px;
+}
+
+
+table.dataTable thead th, table.dataTable thead td {
+    border-left: 1px #ccc solid;
+    border-bottom: 1px #ccc solid;
+  	border-top: 3px #888 solid;
+  	background-color: #efefef;
+  	color: #333;
+}
+
+table.dataTable thead th:last-child, table.dataTable thead td:last-child {
+	border-right: 1px #ccc solid;
+}
+
+table.dataTable thead th div{
+	width: 19px;
+	height: 19px;
+	display: inline-block;
+	background-color: red;
+}
+
+table.dataTable thead .sorting_asc {
+  background: none;
+}
+
+table.dataTable thead .sorting_desc {
+  background: none;
+}
+
+table.dataTable thead .sorting {
+  background: none;
+}
+
+table.dataTable thead .sorting_asc div{
+  background: url("/images/sort_asc.png") no-repeat center center;
+}
+
+table.dataTable thead .sorting_desc div{
+  background: url("/images/sort_desc.png") no-repeat center center;
+}
+
+table.dataTable thead .sorting div{
+  background: url("/images/sort_both.png") no-repeat center center;
+}
+
+
+
 
 
 
@@ -50,9 +110,7 @@ table.table > tbody > tr > td {
 }
 
 
-table.dataTable thead th, table.dataTable thead td {
-    border-top: 1px solid #111;
-}
+
 
 
 /************* twbs ***********/
