add .currency class to right align datatable

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -180,3 +180,16 @@ table.dataTable.no-footer {
     margin-bottom: -1px;
     margin-top: 20px;
 }
+
+
+
+
+
+
+
+
+/************* datatables ***************/
+
+.currency {
+	text-align: right;
+}
