--- a/www/css/dashboard.css
+++ b/www/css/dashboard.css
@@ -79,6 +79,12 @@ body {
     padding-right: 40px;
     padding-left: 40px;
   }
+
+  
+  .inventory-status.main {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
 }
 .main .page-header {
   margin-top: 0;
