--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -105,7 +105,7 @@ table.dataTable.no-footer {
 
 
 
-.panel-body table.dataTable thead tr x`th {
+.panel-body table.dataTable thead tr th {
 	border: 0;
 }
 
