--- a/www/css/dashboard.css
+++ b/www/css/dashboard.css
@@ -90,6 +90,11 @@ body {
     padding-right: 10px;
     padding-left: 10px;
   }
+
+  .check-funding.main {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
 }
 .main .page-header {
   margin-top: 0;
